# error-code

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_ci.yml
cmake/: Config.cmake.in
cpp/: error_code.cpp
include/: error_code.h
tests/: CMakeLists.txt
tests/cpp/: main.cpp
